# test_repo

./: modules.json  pyproject.toml
.github/: megalinter.yml
.github/actions/poetry-version/: action.yml
.github/workflows/: def_changelog.yml  def_close-non-release-pr.yml  def_generate-changelog.yml  def_get-tags.yml  def_megalinter.yml  def_module-semver.yml  def_move-non-release-pr.yml  def_move-pr.yml  def_poetry-version.yml  def_poetry.yml  def_publish-release.yml  def_pytest.yml  def_rebase.yml  def_release-pr.yml  def_reviewdog-fix.yml  def_reviewdog-lint.yml  def_reviewdog.yml  def_semver-version.yml  def_semver.yml  def_sync-poetry.yml  def_test-matrix.yml  def_test-module-matrix.yml  def_test-module.yml  move-non-release-pr.yml  move-pr-to-dev.yml  pr-close-main.yml  pr-open-dev.yml  pr-open-edit-reopen-main.yml  pr-open-main.yml  publish-release.yml  pull.yml  push-dev.yml  push.yml  release-pr.yml
modules/nextflow/: README.md  __init__.py  schema.yaml
modules/nextflow/scripts/: nextflow.sh
tests/: test_test.py
